# r_python

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  error.txt  rpython.toml
.github/workflows/: ci.yml  release.yml
crates/rpython_ast/: Cargo.toml
crates/rpython_ast/src/: arena.rs  display.rs  expr.rs  item.rs  lib.rs  literal.rs  pat.rs  path.rs  stmt.rs  ty.rs  visit.rs
crates/rpython_borrowck/: Cargo.toml
crates/rpython_borrowck/src/: lib.rs
crates/rpython_cli/: Cargo.toml
crates/rpython_cli/src/: main.rs
crates/rpython_codegen_llvm/: Cargo.toml
crates/rpython_codegen_llvm/src/: c.rs  lib.rs
crates/rpython_driver/: Cargo.toml
crates/rpython_driver/src/: lib.rs  link.rs  pipeline.rs  session.rs
crates/rpython_errors/: Cargo.toml
crates/rpython_errors/src/: codes.rs  diagnostic.rs  emitter.rs  handler.rs  lib.rs
crates/rpython_hir/: Cargo.toml
crates/rpython_hir/src/: expr.rs  ids.rs  lib.rs  owner.rs  pat.rs  place.rs  stmt.rs
crates/rpython_hir_build/: Cargo.toml
crates/rpython_hir_build/src/: lib.rs
crates/rpython_ids/: Cargo.toml
crates/rpython_ids/src/: lib.rs
crates/rpython_mir/: Cargo.toml
crates/rpython_mir/src/: body.rs  lib.rs  operand.rs  place.rs  pretty.rs  rvalue.rs  statement.rs  terminator.rs  value.rs  visit.rs
crates/rpython_mir/src/interp/: memory.rs  mod.rs  ops.rs
crates/rpython_mir_build/: Cargo.toml
crates/rpython_mir_build/src/: builder.rs  lib.rs  lower.rs
crates/rpython_parse/: Cargo.toml  grammar.md
crates/rpython_parse/src/: expr.rs  item.rs  lib.rs  parser.rs  stmt.rs
crates/rpython_parse/tests/: ann_assign.rs  return_value.rs
crates/rpython_resolve/: Cargo.toml
crates/rpython_resolve/src/: collect.rs  def_map.rs  imports.rs  lib.rs  resolve_expr.rs  resolved.rs  ribs.rs  scope.rs  symbols.rs
crates/rpython_runtime/: Cargo.toml  build.rs
crates/rpython_runtime/src/: lib.rs  rt.c
crates/rpython_span/: Cargo.toml
crates/rpython_span/src/: hygiene.rs  lib.rs  source_map.rs  span.rs
crates/rpython_syntax/: Cargo.toml
crates/rpython_syntax/src/: error.rs  indent.rs  lexer.rs  lib.rs  token.rs
crates/rpython_syntax/tests/: indent.rs
crates/rpython_test_runner/: Cargo.toml
crates/rpython_test_runner/src/: lib.rs
crates/rpython_typeck/: Cargo.toml
crates/rpython_typeck/src/: check_expr.rs  check_fn.rs  check_pat.rs  lib.rs  traits.rs  unify.rs  well_known.rs
crates/rpython_types/: Cargo.toml
crates/rpython_types/src/: fold.rs  infer.rs  layout.rs  lib.rs  subst.rs  trait_ref.rs  ty.rs
docs/: DESIGN_SPEC.md  DISTRIBUTION.md  HOW_THE_FUDGE_WE_BUILD_A_PROGRAMMING_LANGUAGE.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LANGUAGE.md  NAMING.md  README.md  V2_ROADMAP.md
docs/errors/: E0001.md  E0002.md  E0201.md  E0202.md  E0203.md  E0204.md  E0300.md  E0301.md  E0302.md  E0303.md  E0304.md  E0305.md  E0306.md  README.md
examples/: classes_demo.rpy  extern_c.rpy  factorial.rpy  fizzbuzz.rpy  gcd.rpy  hello.rpy  http_client.rpy  http_json_api.rpy  http_server.rpy  interfaces_demo.rpy  static_typing.rpy  structs_demo.rpy  traits_demo.rpy
scripts/: install.sh  package-release.sh
stdlib/: README.md  prelude.rpy
stdlib/collections/: vec.rpy
stdlib/core/: option.rpy  prelude.rpy
tests/: lexer_suite.rs  programs_e2e.rs
tests/lexer/: arith.tokens.expect  if_block.tokens.expect
tools/: README.md
