[package]
name = "rpython_mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap = { workspace = true }
rpython_ids = { workspace = true }
rpython_span = { workspace = true }
rpython_types = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
