[package]
name = "rpython_test_runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
rpython_ast = { workspace = true }
rpython_driver = { workspace = true }
rpython_errors = { workspace = true }
rpython_mir = { workspace = true }
rpython_mir_build = { workspace = true }
rpython_parse = { workspace = true }
rpython_resolve = { workspace = true }
rpython_span = { workspace = true }
rpython_syntax = { workspace = true }
rpython_typeck = { workspace = true }
smol_str = { workspace = true }
